[gd_scene format=3 uid="uid://c7h4u5tv0ixus"]

[ext_resource type="Script" uid="uid://cxdjstwenjgfr" path="res://Scenes/task_ui.gd" id="1_yxxbm"]

[node name="TaskUI" type="Control" unique_id=1890474777]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yxxbm")

[node name="Panel" type="Panel" parent="." unique_id=778818009]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1350160237]
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_left = 103.0
offset_top = 98.0
offset_right = 1015.0
offset_bottom = 568.0

[node name="LabelRequirement" type="Label" parent="VBoxContainer" unique_id=1700329667]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer" unique_id=1444025733]
layout_mode = 2

[node name="LabelName" type="Label" parent="VBoxContainer" unique_id=775337917]
layout_mode = 2

[node name="LabelDescription" type="Label" parent="VBoxContainer" unique_id=1297362634]
layout_mode = 2

[node name="LabelProgress" type="Label" parent="VBoxContainer" unique_id=1472251528]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="VBoxContainer" unique_id=468829098]
layout_mode = 2
text = "Export"
